headscale/deployment-headscale.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: headscale
spec:
  selector:
    matchLabels:
      name: headscale
  template:
    metadata:
      labels:
        name: headscale
    spec:
      tolerations:
        - key: cloud
          operator: Exists
          effect: NoExecute
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: cloud
                operator: In
                values:
                - oracle
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      volumes:
      - name: config
        configMap:
          name: headscale-config
      - name: acl
        configMap:
          name: headscale-acl
      - name: socket
        emptyDir: {}
      - name: private-key
        secret:
          secretName: headscale-private-key
      containers:
      - name: headscale
        ports:
        - containerPort: 8080
        - containerPort: 3478
        image: docker.io/headscale/headscale:0.16.4
        command: ["headscale", "serve"]
        volumeMounts:
        - name: config
          mountPath: /etc/headscale
        - name: socket
          mountPath: /var/run/headscale
        - name: private-key
          mountPath: /var/run/headscale/private.key
          subPath: key
        - name: acl
          mountPath: /var/run/headscale/acl.hujson
          subPath: acl.hujson
