headscale/statefulset-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-headscale
spec:
  serviceName: postgres-headscale
  selector:
    matchLabels:
      name: postgres-headscale
  template:
    metadata:
      labels:
        name: postgres-headscale
    spec:
      tolerations:
        - key: cloud
          operator: Exists
          effect: NoExecute
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: cloud
                operator: In
                values:
                - oracle
      containers:
      - name: postgres-headscale
        image: docker.io/postgres:14.5-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
          subPath: data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: oci-bv-encrypted
      resources:
        requests:
          storage: 2Gi
