headscale/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headscale
spec:
  ports:
  - port: 5432
    name: pg
  selector:
    name: postgres-headscale
