headscale/service-headscale-stun.yaml
kind: Service
apiVersion: v1
metadata:
  name: headscale-stun
spec:
  type: NodePort
  ipFamilyPolicy: RequireDualStack
  externalTrafficPolicy: Local
  ports:
    - name: stun
      port: 3478
      protocol: UDP
      nodePort: 30478
  selector:
    name: headscale
